--- a/app/src/main/res/layout/layout_main_screen.xml
+++ b/app/src/main/res/layout/layout_main_screen.xml
@@ -16,7 +16,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            android:padding="8dp">
+            android:padding="4dp">
 
             <TextView
                 android:id="@+id/welcomeTextView"
@@ -28,10 +28,10 @@
 
             <ImageView
                 android:id="@+id/viewBookmarks"
-                android:layout_width="36dp"
-                android:layout_height="36dp"
+                android:layout_width="32dp"
+                android:layout_height="32dp"
                 android:layout_marginEnd="8dp"
-                android:src="@drawable/ic_bookmark_24"
+                android:src="@drawable/ic_bookmark"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 app:tint="@color/grey_800" />
@@ -43,7 +43,6 @@
             android:layout_width="match_parent"
             android:layout_height="180dp"
             android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
             android:layout_marginEnd="8dp"
             android:orientation="horizontal"
             android:scrollbars="horizontal">
@@ -59,7 +58,6 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
-            android:layout_marginTop="4dp"
             android:layout_marginEnd="8dp"
             android:orientation="horizontal">
 
@@ -89,14 +87,14 @@
             android:layout_width="80dp"
             android:layout_height="2dp"
             android:layout_marginStart="8dp"
-            android:layout_marginTop="2dp"
+            android:layout_marginTop="1dp"
             android:background="@drawable/text_line" />
 
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="116dp"
             android:layout_marginStart="4dp"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="2dp"
             android:layout_marginEnd="4dp"
             android:orientation="horizontal">
 
@@ -115,7 +113,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="3dp"
             android:text="@string/suggested_topics"
             android:textColor="@color/grey_700"
             android:textSize="16sp" />
@@ -124,7 +122,7 @@
             android:layout_width="130dp"
             android:layout_height="2dp"
             android:layout_marginStart="8dp"
-            android:layout_marginTop="2dp"
+            android:layout_marginTop="1dp"
             android:background="@drawable/text_line" />
 
         <androidx.recyclerview.widget.RecyclerView
@@ -133,10 +131,10 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_gravity="center"
-            android:layout_margin="3dp"
+            android:layout_margin="2dp"
             app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
             app:spanCount="3"
-            tools:itemCount="7"
+            tools:itemCount="6"
             tools:listitem="@layout/item_category_news" />
 
     </LinearLayout>
