refactor: refactor and add viewbinding

--- a/app/src/main/res/layout/activity_single_news.xml
+++ b/app/src/main/res/layout/activity_single_news.xml
@@ -9,7 +9,7 @@
     <androidx.cardview.widget.CardView
         android:id="@+id/card_news_image"
         android:layout_width="match_parent"
-        android:layout_margin="8dp"
+        android:layout_margin="@dimen/cardview_margin"
         android:layout_height="250dp"
         app:cardCornerRadius="20dp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -29,7 +29,7 @@
     <androidx.cardview.widget.CardView
         android:id="@+id/card_news_content"
         android:layout_width="match_parent"
-        android:layout_margin="8dp"
+        android:layout_margin="@dimen/cardview_margin"
         android:layout_height="0dp"
         android:layout_below="@id/card_news_image"
         android:elevation="15dp"
@@ -71,9 +71,9 @@
                         android:id="@+id/news_full_description_text"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginLeft="8dp"
-                        android:layout_marginTop="10dp"
-                        android:layout_marginRight="8dp"
+                        android:layout_marginStart="@dimen/horizon_vertical_margin"
+                        android:layout_marginTop="@dimen/horizon_vertical_margin"
+                        android:layout_marginEnd="@dimen/horizon_vertical_margin"
                         android:text="@string/description"
                         android:textColor="#4B4B4B"
                         android:textSize="16sp" />
@@ -82,10 +82,10 @@
                         android:id="@+id/news_full_content_text"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginLeft="8dp"
-                        android:layout_marginTop="10dp"
-                        android:layout_marginRight="8dp"
-                        android:maxLength="260"
+                        android:layout_marginStart="@dimen/horizon_vertical_margin"
+                        android:layout_marginTop="@dimen/horizon_vertical_margin"
+                        android:layout_marginEnd="@dimen/horizon_vertical_margin"
+                        android:maxLength="300"
                         android:text="@string/content"
                         android:textColor="#4B4B4B"
                         android:textSize="16sp" />
