--- a/app/src/main/res/layout/dialog_no_internet.xml
+++ b/app/src/main/res/layout/dialog_no_internet.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -15,13 +16,14 @@
         android:src="@drawable/no_internet"
         app:layout_constraintBottom_toTopOf="@+id/textView"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        android:contentDescription="@string/no_internet" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:text="Oops!"
+        android:text="@string/no_internet"
         android:textAlignment="center"
         android:textColor="#000"
         android:textSize="20sp"
@@ -56,6 +58,7 @@
         android:layout_marginTop="16dp"
         android:background="@drawable/custom_button"
         android:clickable="true"
+        android:focusable="true"
         android:text="@string/try_again"
         android:textAllCaps="false"
         android:textStyle="bold"
