--- a/app/src/main/res/layout/item_news_full.xml
+++ b/app/src/main/res/layout/item_news_full.xml
@@ -59,7 +59,7 @@
 
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
+                    android:layout_height="wrap_content"
                     android:orientation="vertical">
 
 
@@ -67,22 +67,22 @@
                         android:id="@+id/news_full_headline_text"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginLeft="25dp"
-                        android:layout_marginRight="15dp"
-                        android:text="Heading :"
+                        android:layout_marginStart="25dp"
+                        android:layout_marginEnd="15dp"
+                        android:text="@string/heading"
                         android:textColor="@android:color/black"
-                        android:textSize="16dp" />
+                        android:textSize="16sp" />
 
                     <TextView
                         android:id="@+id/news_full_date_text"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="2dp"
-                        android:layout_marginLeft="25dp"
-                        android:layout_marginRight="15dp"
-                        android:text="Date"
+                        android:layout_marginStart="25dp"
+                        android:layout_marginEnd="15dp"
+                        android:text="@string/date"
                         android:textColor="@android:color/darker_gray"
-                        android:textSize="12dp" />
+                        android:textSize="12sp" />
 
                     <TextView
                         android:id="@+id/news_full_description_text"
@@ -91,9 +91,9 @@
                         android:layout_marginLeft="15dp"
                         android:layout_marginTop="10dp"
                         android:layout_marginRight="15dp"
-                        android:text="Description"
+                        android:text="@string/description"
                         android:textColor="#4B4B4B"
-                        android:textSize="14dp" />
+                        android:textSize="14sp" />
 
                     <TextView
                         android:id="@+id/news_full_content_text"
@@ -102,10 +102,10 @@
                         android:layout_marginLeft="15dp"
                         android:layout_marginTop="10dp"
                         android:layout_marginRight="15dp"
-                        android:text="Content"
+                        android:text="@string/content"
                         android:textColor="#4B4B4B"
-                        android:textSize="14dp"
-                        android:maxLength="260" />
+                        android:textSize="14sp"
+                        android:maxLength="300" />
 
                 </LinearLayout>
             </ScrollView>
@@ -146,8 +146,8 @@
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintBottom_toBottomOf="parent"
                     android:layout_marginStart="20dp"
-                    android:textSize="14dp"
-                    android:text="Click to read Full news"
+                    android:textSize="14sp"
+                    android:text="@string/click_to_read_full_news"
                     android:textColor="@color/white"/>
 
 
@@ -165,14 +165,15 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/ic_bookmark_border"
-        android:layout_toLeftOf="@id/news_full_fab_share"
+        android:layout_toStartOf="@id/news_full_fab_share"
         android:layout_above="@+id/card_news_content"
-        android:layout_marginRight="10dp"
+        android:layout_marginEnd="10dp"
         android:layout_marginBottom="12dp"
         android:theme="@style/fab_action"
         app:rippleColor="#FF871F"
         app:fabSize="normal"
         android:clickable="true"
+        android:focusable="true"
         android:elevation="20dp"
         app:elevation="20dp"/>
 
@@ -184,12 +185,13 @@
         app:fabSize="normal"
         android:layout_marginBottom="12dp"
         android:src="@drawable/ic_bookmark_orange_fill"
-        android:layout_toLeftOf="@id/news_full_fab_share"
+        android:layout_toStartOf="@id/news_full_fab_share"
         android:layout_above="@+id/card_news_content"
-        android:layout_marginRight="10dp"
+        android:layout_marginEnd="10dp"
         android:theme="@style/fab_action"
         app:rippleColor="#FF871F"
         android:clickable="true"
+        android:focusable="true"
         android:elevation="20dp"
         app:elevation="20dp"/>
 
@@ -207,7 +209,8 @@
         android:paddingBottom="4dp"
         app:rippleColor="#FF871F"
         android:clickable="true"
-        android:layout_marginRight="25dp"
+        android:focusable="true"
+        android:layout_marginEnd="25dp"
         app:elevation="20dp"
         android:elevation="20dp"/>
 
