--- a/app/src/main/res/layout/item_top_headlines.xml
+++ b/app/src/main/res/layout/item_top_headlines.xml
@@ -19,7 +19,7 @@
             android:layout_width="90dp"
             android:layout_height="90dp"
             app:cardCornerRadius="10dp"
-            android:layout_marginRight="5dp"
+            android:layout_marginEnd="5dp"
             android:elevation="20dp"
             android:backgroundTint="@android:color/white"
             android:padding="0.2dp">
@@ -39,7 +39,7 @@
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:layout_gravity="top"
-            android:layout_marginLeft="4dp">
+            android:layout_marginStart="4dp">
 
             <TextView
                 android:id="@+id/title_top_headlines"
@@ -47,7 +47,7 @@
                 android:layout_height="wrap_content"
                 android:lines="3"
                 android:ellipsize="end"
-                android:text="Parliament LIVE: RS Secretariat to Revisit Issue of Marshals' Uniform; Cong Protests Against Removal of Gandhis' SPG Cover in LS - News18"
+                android:text="@string/news_title_example"
                 android:textColor="@android:color/black"
                 android:textSize="14sp"/>
 
@@ -61,7 +61,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:lines="1"
-                android:text="dec 10, 2019 | 04:32 am"
+                android:text="@string/news_date_example"
                 android:textColor="@android:color/darker_gray"
                 android:textSize="12sp"/>
 
