--- a/app/src/main/res/layout/layout_main_screen.xml
+++ b/app/src/main/res/layout/layout_main_screen.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.core.widget.NestedScrollView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -22,15 +23,18 @@
                 android:id="@+id/welcomeTextView"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/horizon_vertical_margin"
                 android:text="@string/good_morning"
                 android:textColor="#1B1B1B"
-                android:textSize="22sp" />
+                android:textSize="22sp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
             <ImageView
                 android:id="@+id/viewBookmarks"
                 android:layout_width="32dp"
                 android:layout_height="32dp"
-                android:layout_marginEnd="8dp"
+                android:layout_marginEnd="@dimen/horizon_vertical_margin"
                 android:src="@drawable/ic_bookmark"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
@@ -42,8 +46,8 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="180dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginEnd="8dp"
+            android:layout_marginStart="@dimen/horizon_vertical_margin"
+            android:layout_marginEnd="@dimen/horizon_vertical_margin"
             android:orientation="horizontal"
             android:scrollbars="horizontal">
 
@@ -57,8 +61,8 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:layout_marginEnd="8dp"
+            android:layout_marginStart="@dimen/horizon_vertical_margin"
+            android:layout_marginEnd="@dimen/horizon_vertical_margin"
             android:orientation="horizontal">
 
             <TextView
@@ -75,7 +79,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_gravity="center"
-                android:layout_marginEnd="8dp"
+                android:layout_marginEnd="@dimen/horizon_vertical_margin"
                 android:gravity="center"
                 android:text="@string/view_all"
                 android:textColor="#001AFF"
@@ -86,7 +90,7 @@
         <View
             android:layout_width="80dp"
             android:layout_height="2dp"
-            android:layout_marginStart="8dp"
+            android:layout_marginStart="@dimen/horizon_vertical_margin"
             android:layout_marginTop="1dp"
             android:background="@drawable/text_line" />
 
@@ -112,7 +116,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
+            android:layout_marginStart="@dimen/horizon_vertical_margin"
             android:layout_marginTop="3dp"
             android:text="@string/suggested_topics"
             android:textColor="@color/grey_700"
@@ -121,7 +125,7 @@
         <View
             android:layout_width="130dp"
             android:layout_height="2dp"
-            android:layout_marginStart="8dp"
+            android:layout_marginStart="@dimen/horizon_vertical_margin"
             android:layout_marginTop="1dp"
             android:background="@drawable/text_line" />
 
