--- a/app/src/main/res/layout/shimmer_top_headlines.xml
+++ b/app/src/main/res/layout/shimmer_top_headlines.xml
@@ -19,7 +19,7 @@
             android:layout_width="90dp"
             android:layout_height="90dp"
             app:cardCornerRadius="10dp"
-            android:layout_marginRight="5dp"
+            android:layout_marginEnd="5dp"
             android:elevation="20dp"
             android:backgroundTint="@android:color/white"
             android:padding="0.2dp">
